--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dom-to-image-more": "^2.12.0",
+    "express": "^4.18.2",
     "html2canvas": "^1.4.1",
     "json-server": "^0.16.3",
     "react": "^18.2.0",
